<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/teal_200"
        android:fontFamily="@font/crafty_girls"
        android:text="@string/profile_r"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/p1"
        android:scaleType="fitXY"
        android:src="@drawable/p2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

    </ImageView>

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="40dp"
        android:background="#F3E24F"
        android:ems="10"
        android:hint="@string/enter_your_Name"
        android:inputType="textPersonName"
        android:padding="12sp"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="0dp"
        android:autofillHints="Joe" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="#A9E463"
        android:ems="10"
        android:hint="@string/enter_your_Email"
        android:padding="12sp"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        tools:layout_editor_absoluteX="21dp"
        android:autofillHints="joe123@gmail.com" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="#5EC1ED"
        android:ems="10"
        android:hint="@string/enter_your_Password"
        android:padding="12sp"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        tools:layout_editor_absoluteX="44dp"
        android:autofillHints="qwerty12345" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="#78F1E6"
        android:ems="10"
        android:hint="@string/enter_your_phone_Number"
        android:inputType="phone"
        android:padding="12sp"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:layout_editor_absoluteX="85dp"
        android:autofillHints="12345-67890" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="#F34A4A"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_your_Address"
        android:padding="12sp"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        tools:layout_editor_absoluteX="66dp"
        android:autofillHints="Blackstone,street12" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="36dp"
        android:text="@string/Submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />


</androidx.constraintlayout.widget.ConstraintLayout>

